unpackaged/main/default/objects/FFX_PSAtoFFAIntegrationCustomSetting__c/FFX_PSAtoFFAIntegrationCustomSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurable settings for Accelerate PSA to FFA Integration</description>
    <label>FFX PSA to FFA Integration Settings</label>
</CustomObject>