unpackaged/main/default/objects/FFX_PSAtoFFAIntegrationCustomSetting__c/fields/FFX_Create_Dimension_2_Immediately__c.field-meta.xml
<CustomField>
    <fullName>FFX_Create_Dimension_2_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When True the Practice to Dimension 2 Message runs immediately. When False runs asynchronously via Message Delivery scheduled job.</inlineHelpText>
    <label>Create Dimension 2 Immediately</label>
    <type>Checkbox</type>
</CustomField>