unpackaged/main/default/objects/FFX_PSAtoFFAIntegrationCustomSetting__c/fields/FFX_PINExpenseDeliverNow__c.field-meta.xml
<CustomField>
    <fullName>FFX_PINExpenseDeliverNow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When True the Expense Report to Payable Invoice/ Credit Note Message runs immediately. When False runs asynchronously via Message Delivery scheduled job.</inlineHelpText>
    <label>Create PIN/ PCR from Expense Immediately</label>
    <type>Checkbox</type>
</CustomField>