unpackaged/main/default/objects/FFX_PSAtoFFAIntegrationCustomSetting__c/fields/FFX_PINVendorInvoiceDeliverNow__c.field-meta.xml
<CustomField>
    <fullName>FFX_PINVendorInvoiceDeliverNow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When True the Vendor Invoice to Payable Invoice/Credit Note Message runs immediately. When False runs asynchronously via Message Delivery scheduled job.</inlineHelpText>
    <label>Create PIN/PCR &gt; Vendor Inv Immediately</label>
    <type>Checkbox</type>
</CustomField>