unpackaged/main/default/objects/FFX_PSAtoFFAIntegrationCustomSetting__c/fields/FFX_SINDeliverNow__c.field-meta.xml
<CustomField>
    <fullName>FFX_SINDeliverNow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When True the Billing Event to Sales Invoice/ Credit Note Message runs immediately. When False runs asynchronously via Message Delivery scheduled job.</inlineHelpText>
    <label>Create Sales Invoice/ Credit Immediately</label>
    <type>Checkbox</type>
</CustomField>